// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Partnerships renders correctly with default empty values 1`] = `
<DocumentFragment>
  <dl
    class="MuiBox-root css-1mgrf5c"
  >
    <div
      class="MuiBox-root css-0"
    >
      <dt
        class="MuiTypography-root MuiTypography-subtitle2 css-h3wl1a-MuiTypography-root"
      >
        Indigenous
      </dt>
      <dd
        class="MuiTypography-root MuiTypography-body1 css-ewuypk-MuiTypography-root"
      >
        None
      </dd>
    </div>
    <div
      class="MuiBox-root css-164r41r"
    >
      <dt
        class="MuiTypography-root MuiTypography-subtitle2 css-h3wl1a-MuiTypography-root"
      >
        Other Partnerships
      </dt>
      <dd
        class="MuiTypography-root MuiTypography-body1 css-ewuypk-MuiTypography-root"
      >
        None
      </dd>
    </div>
  </dl>
</DocumentFragment>
`;

exports[`Partnerships renders correctly with existing partnership values 1`] = `
<DocumentFragment>
  <dl
    class="MuiBox-root css-1mgrf5c"
  >
    <div
      class="MuiBox-root css-0"
    >
      <dt
        class="MuiTypography-root MuiTypography-subtitle2 css-h3wl1a-MuiTypography-root"
      >
        Indigenous
      </dt>
      <dd
        class="MuiTypography-root MuiTypography-body1 makeStyles-projectPartners-3 css-ewuypk-MuiTypography-root"
      >
        First nations code
      </dd>
      <dd
        class="MuiTypography-root MuiTypography-body1 makeStyles-projectPartners-3 css-ewuypk-MuiTypography-root"
      />
    </div>
    <div
      class="MuiBox-root css-164r41r"
    >
      <dt
        class="MuiTypography-root MuiTypography-subtitle2 css-h3wl1a-MuiTypography-root"
      >
        Other Partnerships
      </dt>
      <dd
        class="MuiTypography-root MuiTypography-body1 makeStyles-projectPartners-3 css-ewuypk-MuiTypography-root"
      >
        partner 3
      </dd>
      <dd
        class="MuiTypography-root MuiTypography-body1 makeStyles-projectPartners-3 css-ewuypk-MuiTypography-root"
      >
        partner 4
      </dd>
    </div>
  </dl>
</DocumentFragment>
`;

exports[`Partnerships renders correctly with invalid null values 1`] = `
<DocumentFragment>
  <dl
    class="MuiBox-root css-1mgrf5c"
  >
    <div
      class="MuiBox-root css-0"
    >
      <dt
        class="MuiTypography-root MuiTypography-subtitle2 css-h3wl1a-MuiTypography-root"
      >
        Indigenous
      </dt>
      <dd
        class="MuiTypography-root MuiTypography-body1 css-ewuypk-MuiTypography-root"
      >
        None
      </dd>
    </div>
    <div
      class="MuiBox-root css-164r41r"
    >
      <dt
        class="MuiTypography-root MuiTypography-subtitle2 css-h3wl1a-MuiTypography-root"
      >
        Other Partnerships
      </dt>
      <dd
        class="MuiTypography-root MuiTypography-body1 css-ewuypk-MuiTypography-root"
      >
        None
      </dd>
    </div>
  </dl>
</DocumentFragment>
`;
